--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "env": {
     "es2021": true,
-    "node": true
+    "node": true,
+    "jest": true
   },
   "extends": [
     "airbnb-base",
@@ -19,6 +20,7 @@
     "prettier"
   ],
   "rules": {
+    "no-shadow": "off",
     "prettier/prettier": "error",
     "class-methods-use-this": "off",
     "camelcase": "off",
