--- a/backend/package.json
+++ b/backend/package.json
@@ -5,22 +5,25 @@
   "author": "Rodrigo Pacheco",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/index.ts --transpileOnly --ignore-watch node_modules",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/index.ts",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+    "test": "jest"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "date-fns": "^2.16.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "mysql": "^2.14.1",
     "pg": "^8.4.1",
     "reflect-metadata": "^0.1.10",
+    "tsyringe": "^4.4.0",
     "typeorm": "0.2.28"
   },
   "devDependencies": {
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
+    "@types/jest": "^26.0.20",
+    "@types/mocha": "^8.2.0",
     "@types/node": "^8.0.29",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
@@ -30,8 +33,11 @@
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "2.21.2",
     "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.6.3",
     "prettier": "^2.1.2",
+    "ts-jest": "^26.5.1",
     "ts-node-dev": "^1.0.0",
-    "typescript": "3.3.3333"
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^4.1.5"
   }
 }
