--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "SchoolWarnings",
+  "name": "School",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Rodrigo Pacheco",
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/index.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "test": "jest"
   },
   "dependencies": {
@@ -14,7 +14,7 @@
     "date-fns": "^2.16.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "pg": "^8.4.1",
+    "pg": "^8.5.1",
     "reflect-metadata": "^0.1.10",
     "tsyringe": "^4.4.0",
     "typeorm": "0.2.28"
