--- a/backend/package.json
+++ b/backend/package.json
@@ -5,36 +5,47 @@
   "author": "Rodrigo Pacheco",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/index.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only src/index.ts",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "test": "jest"
+    "test": "jest",
+    "tsc-check": "tsc --noEmit --skipLibCheck -p ."
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
-    "date-fns": "^2.16.1",
+    "date-fns": "^2.18.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "pg": "^8.5.1",
-    "reflect-metadata": "^0.1.10",
+    "joi": "^17.4.0",
+    "js-brasil": "^2.4.1",
+    "mongodb": "^3.6.4",
+    "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
-    "typeorm": "0.2.28"
+    "typeorm": "^0.2.31",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.20",
+    "@types/joi": "^17.2.3",
     "@types/mocha": "^8.2.0",
+    "@types/mongodb": "^3.6.7",
     "@types/node": "^8.0.29",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
-    "eslint": "^7.11.0",
-    "eslint-config-airbnb-base": "^14.2.0",
+    "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
+    "eslint": "^7.21.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^6.14.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
-    "eslint-plugin-import": "2.21.2",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.3",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.1",
     "ts-jest": "^26.5.1",
     "ts-node-dev": "^1.0.0",
     "tsconfig-paths": "^3.9.0",
