--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,11 @@
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "cpf-cnpj-validator": "^1.0.3",
     "date-fns": "^2.18.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "joi": "^17.4.0",
-    "js-brasil": "^2.4.1",
     "mongodb": "^3.6.4",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
