--- a/backend/package.json
+++ b/backend/package.json
@@ -23,8 +23,7 @@
     "mongodb": "^3.6.4",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
-    "typeorm": "^0.2.31",
-    "uuid": "^8.3.2"
+    "typeorm": "^0.2.31"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -36,7 +35,6 @@
     "@types/mocha": "^8.2.0",
     "@types/mongodb": "^3.6.7",
     "@types/node": "^8.0.29",
-    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "eslint": "^7.21.0",
