--- a/workspaces/backend/package.json
+++ b/workspaces/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "School",
+  "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Rodrigo Pacheco",
@@ -12,7 +12,6 @@
     "tsc-check": "tsc --noEmit --skipLibCheck -p ."
   },
   "dependencies": {
-    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "cpf-cnpj-validator": "^1.0.3",
@@ -26,12 +25,10 @@
     "typeorm": "^0.2.31"
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0",
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.20",
-    "@types/joi": "^17.2.3",
     "@types/mocha": "^8.2.0",
     "@types/mongodb": "^3.6.7",
     "@types/node": "^8.0.29",
