import/no-unresolved off

--- a/workspaces/backend/.eslintrc.json
+++ b/workspaces/backend/.eslintrc.json
@@ -21,6 +21,7 @@
   ],
   "rules": {
     "no-underscore-dangle": "off",
+    "import/no-unresolved": "off",
     "no-console": "off",
     "import/prefer-default-export": "off",
     "no-shadow": "off",
