--- a/workspaces/backend/package.json
+++ b/workspaces/backend/package.json
@@ -10,7 +10,7 @@
     "docker-up": "docker-compose up -d",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "test": "jest",
-    "tsc-check": "tsc --noEmit --skipLibCheck -p ."
+    "tsc-check": "tsc --noEmit --skipLibCheck -p . && eslint ."
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
