--- a/workspaces/backend/.eslintrc.json
+++ b/workspaces/backend/.eslintrc.json
@@ -23,6 +23,9 @@
     "no-underscore-dangle": "off",
     "import/no-unresolved": "off",
     "no-console": "off",
+    "@typescript-eslint/no-unused-vars": ["error", {
+      "argsIgnorePattern": "_"
+    }],
     "import/prefer-default-export": "off",
     "no-shadow": "off",
     "no-useless-constructor": "off",
