--- a/workspaces/backend/package.json
+++ b/workspaces/backend/package.json
@@ -9,7 +9,7 @@
     "start": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only src/index.ts",
     "docker-up": "docker-compose up -d",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "test": "jest",
+    "test": "cross-env NODE_ENV=test jest",
     "tsc-check": "tsc --noEmit --skipLibCheck -p . && eslint ."
   },
   "dependencies": {
@@ -35,6 +35,7 @@
     "@types/node": "^8.0.29",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
+    "cross-env": "^7.0.3",
     "eslint": "^7.21.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^6.14.0",
