--- a/workspaces/backend/package.json
+++ b/workspaces/backend/package.json
@@ -9,7 +9,7 @@
     "start": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only src/index.ts",
     "docker-up": "docker-compose up -d",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "test": "cross-env NODE_ENV=TEST jest",
+    "test": "cross-env NODE_ENV=TEST jest --detectOpenHandles",
     "tsc-check": "tsc --noEmit --skipLibCheck -p . && eslint ."
   },
   "dependencies": {
@@ -22,6 +22,7 @@
     "joi": "^17.4.0",
     "mongodb": "^3.6.4",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.1.3",
     "tsyringe": "^4.4.0",
     "typeorm": "^0.2.31"
   },
@@ -33,6 +34,7 @@
     "@types/mocha": "^8.2.0",
     "@types/mongodb": "^3.6.7",
     "@types/node": "^8.0.29",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "cross-env": "^7.0.3",
