--- a/workspaces/backend/package.json
+++ b/workspaces/backend/package.json
@@ -9,7 +9,7 @@
     "start": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only src/index.ts",
     "docker-up": "docker-compose up -d",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "test": "cross-env NODE_ENV=TEST jest --detectOpenHandles",
+    "test": "cross-env NODE_ENV=TEST jest",
     "tsc-check": "tsc --noEmit --skipLibCheck -p . && eslint ."
   },
   "dependencies": {
