--- a/workspaces/web/.eslintrc.json
+++ b/workspaces/web/.eslintrc.json
@@ -28,6 +28,7 @@
   ],
   "rules": {
     "prettier/prettier": "error",
+    "react/react-in-jsx-scope": "off",
     "space-before-function-paren": "off",
     "react/prop-types": "off"
   }
