--- a/workspaces/web/package.json
+++ b/workspaces/web/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "next": "^9.5.2",
     "next-images": "^1.4.1",
     "react": "^16.13.1",
