--- a/workspaces/backend/package.json
+++ b/workspaces/backend/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "cpf-cnpj-validator": "^1.0.3",
     "date-fns": "^2.18.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "joi": "^17.4.0",
